// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Empty Header > CITZ Login Loading 1`] = `
.c2.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c2.btn .Button__value {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c2.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c2.btn:focus {
  outline-width: 0.4rem;
  outline-style: solid;
  outline-offset: 1px;
  box-shadow: none;
}

.c2.btn.btn-secondary {
  background: none;
}

.c2.btn.btn-info {
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c2.btn.btn-info:hover,
.c2.btn.btn-info:active,
.c2.btn.btn-info:focus {
  background: none;
}

.c2.btn.btn-light {
  border: none;
}

.c2.btn.btn-dark {
  border: none;
}

.c2.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
}

.c2.btn.btn-link:hover,
.c2.btn.btn-link:active,
.c2.btn.btn-link:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c2.btn.btn-link:disabled,
.c2.btn.btn-link.disabled {
  background: none;
  pointer-events: none;
}

.c2.btn:disabled,
.c2.btn:disabled:hover {
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.65;
}

.c2.Button .Button__icon {
  margin-right: 1.6rem;
}

.c2.Button--icon-only:focus {
  outline: none;
}

.c2.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c1 {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 999;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  position: relative;
  background-size: cover;
  background-position: center;
  overflow: auto;
  grid-area: content;
}

.c0 .btn.btn-primary {
  display: inline-block;
}

.c0 .btn.btn-primary {
  display: inline-block;
}

.c0 .btn.btn-primary {
  display: inline-block;
}

.c0 .unauth {
  font-size: 2.4rem;
  margin: 15rem auto;
  background-color: rgba(255,255,255);
  padding-top: 1.5rem;
  padding-bottom: 2rem;
  max-width: 75rem;
  border-radius: 0.4rem;
}

.c0 .unauth .sign-in {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .unauth .logo-title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c0 .unauth h1 {
  padding-bottom: 1.8rem;
  font-family: 'BCSans',Fallback,sans-serif;
  font-weight: 700;
  font-size: 2.6rem;
}

.c0 .unauth h6 {
  margin-bottom: 2rem;
}

.c0 .unauth p {
  font-size: 1.4rem;
  font-family: 'BCSans',Fallback,sans-serif;
  line-height: 130%;
  margin-bottom: 0.2rem;
}

.c0 .unauth .message-container {
  border: 1px solid rgba(205,211,216);
  box-shadow: 10px 5px 5px rgba(205,211,216,0.2);
  max-width: 65rem;
  min-width: 90%;
}

.c0 .unauth .message-header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.8rem;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 .unauth .message-header .message-title {
  font-family: BcSans-Bold;
  font-size: 2.2rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0;
}

.c0 .unauth .message-body {
  padding-top: 2.4rem;
  padding-bottom: 2.4rem;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  text-align: left;
}

.c0 .unauth .message-body p {
  font-size: 1.7rem;
  margin-left: 3rem;
  margin-right: 3rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c0 .unauth .spacer {
  padding: 0px;
  margin: 0px;
  margin-left: 1.6rem;
  margin-right: 1.6rem;
}

.c0 .unauth .message-footer {
  -webkit-align-items: right;
  -webkit-box-align: right;
  -ms-flex-align: right;
  align-items: right;
}

.c0 .unauth .foot-note {
  padding-top: 3rem;
}

.c0 .unauth .btn {
  margin-top: 3rem;
  margin-bottom: 3rem;
  margin-left: 10rem;
}

.c0 .unauth .btn-link {
  margin-left: 3rem;
  margin-top: 1rem;
  font-size: 1.2rem;
}

.c0 .unauth .btn-link:focus,
.c0 .unauth .btn-link:active {
  background: none !important;
}

.c0 .unauth .bceid {
  margin-bottom: -3rem;
}

.c0 .unauth .blockText {
  margin: 0 auto 3.8rem auto;
}

.c0 .unauth .or {
  margin: 2rem auto;
}

.c0 .unauth .border-dark {
  border-color: !important;
  color: !important;
}

.c0 .unauth .pims-logo {
  margin-bottom: 1rem;
}

<div
  class="c0 login container-fluid"
>
  <div
    class="c1"
  >
    <div
      class="spinner-border text-warning"
      data-testid="filter-backdrop-loading"
    />
  </div>
  <div
    class="unauth container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-1"
      />
      <div
        class="col-md-3 col-1"
      >
        <img
          alt="PIMS logo"
          class="pims-logo"
          src=""
        />
      </div>
      <div
        class="logo-title col-md-6 col-16"
      >
        <h1 />
      </div>
    </div>
    <div
      class="sign-in row"
    >
      <div
        class="message-container"
      >
        <div
          class="message-header"
        >
          <div
            class="header-icon"
          >
            <svg
              fill="currentColor"
              height="27"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="27"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 1.74.5 3.37 1.41 4.84.95 1.54 2.2 2.86 3.16 4.4.47.75.81 1.45 1.17 2.26.26.55.47 1.5 1.26 1.5s1-.95 1.25-1.5c.37-.81.7-1.51 1.17-2.26.96-1.53 2.21-2.85 3.16-4.4C18.5 12.37 19 10.74 19 9c0-3.87-3.13-7-7-7zm0 9.75a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
              />
            </svg>
          </div>
          <p
            class="message-title"
          >
            Welcome!
          </p>
        </div>
        <div
          class="message-body"
        >
          <p />
          <hr
            class="spacer"
          />
          <p />
        </div>
        <div
          class="message-footer row"
        >
          <div
            class="col-md-6 col-16"
          />
          <div
            class="col-md-6 col-16"
          >
            <button
              class="c2 Button Button--disabled btn btn-primary"
              disabled=""
              type="button"
            >
              <div
                class="Button__value"
              >
                Sign In
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-3 col-1"
      />
      <div
        class="foot-note col-md-6 col-16"
      >
        <p>
          Sign into PIMS with your government issued IDIR
        </p>
      </div>
      <div
        class="col-md-3 col-1"
      />
    </div>
  </div>
</div>
`;

exports[`Empty Header > MOTI Login Loading 1`] = `
.c2.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c2.btn .Button__value {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c2.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c2.btn:focus {
  outline-width: 0.4rem;
  outline-style: solid;
  outline-offset: 1px;
  box-shadow: none;
}

.c2.btn.btn-secondary {
  background: none;
}

.c2.btn.btn-info {
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c2.btn.btn-info:hover,
.c2.btn.btn-info:active,
.c2.btn.btn-info:focus {
  background: none;
}

.c2.btn.btn-light {
  border: none;
}

.c2.btn.btn-dark {
  border: none;
}

.c2.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
}

.c2.btn.btn-link:hover,
.c2.btn.btn-link:active,
.c2.btn.btn-link:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c2.btn.btn-link:disabled,
.c2.btn.btn-link.disabled {
  background: none;
  pointer-events: none;
}

.c2.btn:disabled,
.c2.btn:disabled:hover {
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.65;
}

.c2.Button .Button__icon {
  margin-right: 1.6rem;
}

.c2.Button--icon-only:focus {
  outline: none;
}

.c2.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c1 {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 999;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  position: relative;
  background-image: url("/tenants/MOTI/background-image.jpg");
  background-size: cover;
  background-position: center;
  overflow: auto;
  grid-area: content;
}

.c0 .btn.btn-primary {
  display: inline-block;
}

.c0 .btn.btn-primary {
  display: inline-block;
}

.c0 .btn.btn-primary {
  display: inline-block;
}

.c0 .unauth {
  font-size: 2.4rem;
  margin: 15rem auto;
  background-color: rgba(255,255,255);
  padding-top: 1.5rem;
  padding-bottom: 2rem;
  max-width: 75rem;
  border-radius: 0.4rem;
}

.c0 .unauth .sign-in {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .unauth .logo-title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c0 .unauth h1 {
  padding-bottom: 1.8rem;
  font-family: 'BCSans',Fallback,sans-serif;
  font-weight: 700;
  font-size: 2.6rem;
}

.c0 .unauth h6 {
  margin-bottom: 2rem;
}

.c0 .unauth p {
  font-size: 1.4rem;
  font-family: 'BCSans',Fallback,sans-serif;
  line-height: 130%;
  margin-bottom: 0.2rem;
}

.c0 .unauth .message-container {
  border: 1px solid rgba(205,211,216);
  box-shadow: 10px 5px 5px rgba(205,211,216,0.2);
  max-width: 65rem;
  min-width: 90%;
}

.c0 .unauth .message-header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.8rem;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 .unauth .message-header .message-title {
  font-family: BcSans-Bold;
  font-size: 2.2rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0;
}

.c0 .unauth .message-body {
  padding-top: 2.4rem;
  padding-bottom: 2.4rem;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  text-align: left;
}

.c0 .unauth .message-body p {
  font-size: 1.7rem;
  margin-left: 3rem;
  margin-right: 3rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c0 .unauth .spacer {
  padding: 0px;
  margin: 0px;
  margin-left: 1.6rem;
  margin-right: 1.6rem;
}

.c0 .unauth .message-footer {
  -webkit-align-items: right;
  -webkit-box-align: right;
  -ms-flex-align: right;
  align-items: right;
}

.c0 .unauth .foot-note {
  padding-top: 3rem;
}

.c0 .unauth .btn {
  margin-top: 3rem;
  margin-bottom: 3rem;
  margin-left: 10rem;
}

.c0 .unauth .btn-link {
  margin-left: 3rem;
  margin-top: 1rem;
  font-size: 1.2rem;
}

.c0 .unauth .btn-link:focus,
.c0 .unauth .btn-link:active {
  background: none !important;
}

.c0 .unauth .bceid {
  margin-bottom: -3rem;
}

.c0 .unauth .blockText {
  margin: 0 auto 3.8rem auto;
}

.c0 .unauth .or {
  margin: 2rem auto;
}

.c0 .unauth .border-dark {
  border-color: !important;
  color: !important;
}

.c0 .unauth .pims-logo {
  margin-bottom: 1rem;
}

<div
  class="c0 login container-fluid"
>
  <div
    class="c1"
  >
    <div
      class="spinner-border text-warning"
      data-testid="filter-backdrop-loading"
    />
  </div>
  <div
    class="unauth container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-1"
      />
      <div
        class="col-md-3 col-1"
      >
        <img
          alt="PIMS logo"
          class="pims-logo"
          src="/tenants/MOTI/PIMS-logo.png"
        />
      </div>
      <div
        class="logo-title col-md-6 col-16"
      >
        <h1>
          MOTI Property Information Management System (PIMS)
        </h1>
      </div>
    </div>
    <div
      class="sign-in row"
    >
      <div
        class="message-container"
      >
        <div
          class="message-header"
        >
          <div
            class="header-icon"
          >
            <svg
              fill="currentColor"
              height="27"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="27"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 1.74.5 3.37 1.41 4.84.95 1.54 2.2 2.86 3.16 4.4.47.75.81 1.45 1.17 2.26.26.55.47 1.5 1.26 1.5s1-.95 1.25-1.5c.37-.81.7-1.51 1.17-2.26.96-1.53 2.21-2.85 3.16-4.4C18.5 12.37 19 10.74 19 9c0-3.87-3.13-7-7-7zm0 9.75a2.5 2.5 0 0 1 0-5 2.5 2.5 0 0 1 0 5z"
              />
            </svg>
          </div>
          <p
            class="message-title"
          >
            Welcome!
          </p>
        </div>
        <div
          class="message-body"
        >
          <p>
            PIMS enables users to track and manage information relating to the property interests of the MOTI and BCTFA.
          </p>
          <hr
            class="spacer"
          />
          <p>
            By signing in you acknowledge that not all data included within has been vetted for completeness and accuracy. Please exercise caution by verifying information prior to relying on it.
          </p>
        </div>
        <div
          class="message-footer row"
        >
          <div
            class="col-md-6 col-16"
          />
          <div
            class="col-md-6 col-16"
          >
            <button
              class="c2 Button Button--disabled btn btn-primary"
              disabled=""
              type="button"
            >
              <div
                class="Button__value"
              >
                Sign In
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-3 col-1"
      />
      <div
        class="foot-note col-md-6 col-16"
      >
        <p>
          Sign into PIMS with your government issued IDIR
        </p>
      </div>
      <div
        class="col-md-3 col-1"
      />
    </div>
  </div>
</div>
`;
